--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <header class="Recipe-page">
-    <img src="/image-omelette.jpeg" alt="Omelette Recipe">
+    <img src="image-omelette.jpeg" alt="Omelette Recipe">
     <h1>Simple Omelette Recipe</h1>
     <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection,
       optionally filled with your choice of cheese, vegetables, or meats.</p>
